--- a/Html/indexx.html
+++ b/Html/indexx.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <div class="background-image"></div>
     <div class="login-container">
         <div class="login-box">
             <div class="logo">
